# psysonic

./: CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/api/: subsonic.ts
src/components/: AlbumCard.tsx  CachedImage.tsx  ContextMenu.tsx  FullscreenPlayer.tsx  Hero.tsx  NowPlayingDropdown.tsx  PlayerBar.tsx  QueuePanel.tsx  Sidebar.tsx  VisualizerCanvas.tsx  WaveformSeek.tsx
src/pages/: AlbumDetail.tsx  Albums.tsx  ArtistDetail.tsx  Artists.tsx  Help.tsx  Home.tsx  RandomAlbums.tsx  RandomMix.tsx  Settings.tsx  Statistics.tsx
src/styles/: components.css  layout.css  theme.css
src/types/: butterchurn.d.ts
src/utils/: imageCache.ts
